// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectStateColorScheme should return the correct state 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "selected": "light",
  },
}
`;

exports[`selectStateColorScheme should return the initial state if no state is found 1`] = `
Object {
  "meta": Object {
    "isInitial": true,
  },
  "payload": Object {
    "selected": undefined,
  },
}
`;

exports[`selectStateColorScheme should return the initial state if resource key is not found 1`] = `
Object {
  "meta": Object {
    "isInitial": true,
  },
  "payload": Object {
    "selected": undefined,
  },
}
`;

exports[`selectStateColorSchemeSelected should return the correct state 1`] = `"light"`;

exports[`selectStateColorSchemeSelected should return the default if state isn't found 1`] = `undefined`;
